# All_Rust_Year1

Hw/Hw10/: Cargo.toml
Hw/Hw11/: bustle.txt  para3.txt
Hw/Hw12/: Cargo.toml
Hw/Hw3/: Cargo.toml
Hw/Hw3/tests/: cli.rs
Hw/Hw4/: Cargo.toml
Hw/Hw4/src/: lib.rs  main.rs
Hw/Hw6/src/: lib.rs
Hw10/src/: lib.rs
Hw11/: Cargo.toml
Hw2/: Cargo.toml
Hw2/Tests/: cli.rs
Hw5/: Cargo.toml
Hw5/src/: lib.rs
Hw6/: Cargo.toml
Hw7/: Cargo.toml
Hw7/tests/: cli.rs
Hw8/: Cargo.toml
Hw9/: Cargo.toml
Lab/Lab10/commr/src/: lib.rs  main.rs
Lab/Lab10/commr/tests/: cli.rs
Lab/Lab11/lab11exercise/src/: lib.rs
Lab/Lab11/tailr/src/: lib.rs  (+1 more)
Lab/Lab12/lab12exercise/: Cargo.toml
Lab/Lab5/lab5exercise/: Cargo.toml
Lab/Lab6/lab6exercise/: Cargo.toml
Lab/Lab8/lab8exercise/: Cargo.toml
Lab/Lab8/q4/: Cargo.toml
Lab/Lab9/lab9exercise/: Cargo.toml
Lab10/lab10exercise/: Cargo.toml
Lab12/fortuner/: Cargo.toml
Lab12/fortuner/src/: lib.rs  main.rs
Lab12/fortuner/tests/: cli.rs
Lab3/catr/src/: lib.rs
Lab3/lab3exercise/: Cargo.toml
Lab3/lab3exercise/tests/: cli.rs
Lab4/double/src/: lib.rs
Lab4/headr/: Cargo.toml
Lab4/headr/src/: main.rs
Lab5/05_wcr/src/: lib.rs
Lab6/lab6exercise/src/: lib.rs
Lab7/findr/: Cargo.toml
Lab7/findr/src/: lib.rs
Lab7/lab7exercise/: Cargo.toml
Lab8/cutr/: Cargo.toml
Lab8/q4/: input.csv
Lab9/rust9/: Cargo.toml
Lab9/rust9/src/: main.rs
Projectrust/: Cargo.toml
Projectrust/rustproject/: Cargo.toml
Projectrust/rustproject/src/: lib.rs
Projectrust/src/: lib.rs  main.rs
lab11exercise/: Cargo.toml
(+18 files in other folders)
