[package]
name = "lab10exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "2.33"
regex = "1"
walkdir = "2"
csv = "1"
tempfile = "3.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
sys-info = "0.9"
tempfile = "3.2"
