[package]
name = "rustproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inline_colorization = "0.1.5"


[features]
serde_derive = ["serde/derive"]

